convert gym names to new format

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -200,104 +200,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "data1 = boulder_data.loc[boulder_data['current_time'].str.contains(\":00\")]\n",
-    "data2 = boulder_data.loc[boulder_data['current_time'].str.contains(\":15\")]\n",
-    "data3 = boulder_data.loc[boulder_data['current_time'].str.contains(\":30\")]\n",
-    "data4 = boulder_data.loc[boulder_data['current_time'].str.contains(\":45\")]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "          gym_name      current_time  occupancy  waiting  weather_temp  \\\n",
-       "80      regensburg  2020/10/29 17:00       68.0      0.0          7.42   \n",
-       "81   muenchen-west  2020/10/29 17:00       27.0      0.0          9.09   \n",
-       "82       frankfurt  2020/10/29 17:00       59.0      0.0         10.75   \n",
-       "83        dortmund  2020/10/29 17:00       11.0      0.0          9.99   \n",
-       "84    muenchen-ost  2020/10/29 17:00      100.0     14.0          9.09   \n",
-       "125  muenchen-west  29/10/2020 15:00       27.0      0.0          9.36   \n",
-       "126     regensburg  29/10/2020 15:00       68.0      0.0          7.84   \n",
-       "127   muenchen-ost  29/10/2020 15:00       80.0      0.0          9.36   \n",
-       "128       dortmund  29/10/2020 15:00       11.0      0.0         11.35   \n",
-       "129      frankfurt  29/10/2020 15:00       22.0      0.0         10.79   \n",
-       "\n",
-       "    weather_status  \n",
-       "80            Rain  \n",
-       "81            Rain  \n",
-       "82            Rain  \n",
-       "83            Rain  \n",
-       "84            Rain  \n",
-       "125           Rain  \n",
-       "126           Rain  \n",
-       "127           Rain  \n",
-       "128           Rain  \n",
-       "129           Rain  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gym_name</th>\n      <th>current_time</th>\n      <th>occupancy</th>\n      <th>waiting</th>\n      <th>weather_temp</th>\n      <th>weather_status</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>80</th>\n      <td>regensburg</td>\n      <td>2020/10/29 17:00</td>\n      <td>68.0</td>\n      <td>0.0</td>\n      <td>7.42</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>81</th>\n      <td>muenchen-west</td>\n      <td>2020/10/29 17:00</td>\n      <td>27.0</td>\n      <td>0.0</td>\n      <td>9.09</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>82</th>\n      <td>frankfurt</td>\n      <td>2020/10/29 17:00</td>\n      <td>59.0</td>\n      <td>0.0</td>\n      <td>10.75</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>83</th>\n      <td>dortmund</td>\n      <td>2020/10/29 17:00</td>\n      <td>11.0</td>\n      <td>0.0</td>\n      <td>9.99</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>84</th>\n      <td>muenchen-ost</td>\n      <td>2020/10/29 17:00</td>\n      <td>100.0</td>\n      <td>14.0</td>\n      <td>9.09</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>125</th>\n      <td>muenchen-west</td>\n      <td>29/10/2020 15:00</td>\n      <td>27.0</td>\n      <td>0.0</td>\n      <td>9.36</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>126</th>\n      <td>regensburg</td>\n      <td>29/10/2020 15:00</td>\n      <td>68.0</td>\n      <td>0.0</td>\n      <td>7.84</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>127</th>\n      <td>muenchen-ost</td>\n      <td>29/10/2020 15:00</td>\n      <td>80.0</td>\n      <td>0.0</td>\n      <td>9.36</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>128</th>\n      <td>dortmund</td>\n      <td>29/10/2020 15:00</td>\n      <td>11.0</td>\n      <td>0.0</td>\n      <td>11.35</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>129</th>\n      <td>frankfurt</td>\n      <td>29/10/2020 15:00</td>\n      <td>22.0</td>\n      <td>0.0</td>\n      <td>10.79</td>\n      <td>Rain</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 9
-    }
-   ],
-   "source": [
-    "data1.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "           gym_name      current_time  occupancy  waiting  weather_temp  \\\n",
-       "22760  muenchen-ost  2020/09/26 09:15       97.0      0.0          7.06   \n",
-       "22761      dortmund  2020/09/26 09:15       32.0      0.0         10.57   \n",
-       "22762     frankfurt  2020/09/26 09:15       54.0      0.0          9.75   \n",
-       "22763    regensburg  2020/09/26 09:15       42.0      0.0          7.57   \n",
-       "25782           ost  2020/09/22 07:15       44.0      0.0         14.26   \n",
-       "25783      dortmund  2020/09/22 07:15        7.0      0.0         14.09   \n",
-       "25784     frankfurt  2020/09/22 07:15        0.0      0.0         13.08   \n",
-       "27959      dortmund  2020/09/21 22:15        0.0      0.0         15.21   \n",
-       "27960          west  2020/09/21 22:15        0.0      0.0         13.79   \n",
-       "27961    regensburg  2020/09/21 22:15        0.0      0.0         12.99   \n",
-       "\n",
-       "      weather_status  \n",
-       "22760           Rain  \n",
-       "22761         Clouds  \n",
-       "22762         Clouds  \n",
-       "22763         Clouds  \n",
-       "25782          Clear  \n",
-       "25783          Clear  \n",
-       "25784          Clear  \n",
-       "27959          Clear  \n",
-       "27960         Clouds  \n",
-       "27961         Clouds  "
-      ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gym_name</th>\n      <th>current_time</th>\n      <th>occupancy</th>\n      <th>waiting</th>\n      <th>weather_temp</th>\n      <th>weather_status</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>22760</th>\n      <td>muenchen-ost</td>\n      <td>2020/09/26 09:15</td>\n      <td>97.0</td>\n      <td>0.0</td>\n      <td>7.06</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>22761</th>\n      <td>dortmund</td>\n      <td>2020/09/26 09:15</td>\n      <td>32.0</td>\n      <td>0.0</td>\n      <td>10.57</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>22762</th>\n      <td>frankfurt</td>\n      <td>2020/09/26 09:15</td>\n      <td>54.0</td>\n      <td>0.0</td>\n      <td>9.75</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>22763</th>\n      <td>regensburg</td>\n      <td>2020/09/26 09:15</td>\n      <td>42.0</td>\n      <td>0.0</td>\n      <td>7.57</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>25782</th>\n      <td>ost</td>\n      <td>2020/09/22 07:15</td>\n      <td>44.0</td>\n      <td>0.0</td>\n      <td>14.26</td>\n      <td>Clear</td>\n    </tr>\n    <tr>\n      <th>25783</th>\n      <td>dortmund</td>\n      <td>2020/09/22 07:15</td>\n      <td>7.0</td>\n      <td>0.0</td>\n      <td>14.09</td>\n      <td>Clear</td>\n    </tr>\n    <tr>\n      <th>25784</th>\n      <td>frankfurt</td>\n      <td>2020/09/22 07:15</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>13.08</td>\n      <td>Clear</td>\n    </tr>\n    <tr>\n      <th>27959</th>\n      <td>dortmund</td>\n      <td>2020/09/21 22:15</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>15.21</td>\n      <td>Clear</td>\n    </tr>\n    <tr>\n      <th>27960</th>\n      <td>west</td>\n      <td>2020/09/21 22:15</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>13.79</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>27961</th>\n      <td>regensburg</td>\n      <td>2020/09/21 22:15</td>\n      <td>0.0</td>\n      <td>0.0</td>\n      <td>12.99</td>\n      <td>Clouds</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "metadata": {},
-     "execution_count": 10
-    }
-   ],
-   "source": [
-    "data2.head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "metadata": {},
    "outputs": [],
@@ -328,6 +230,130 @@
    "source": [
     "boulder_data['current_time'].describe()"
    ]
+  },
+  {
+   "source": [
+    "##  Convert ost and west from the old format to muenchen-ost, muenchen-west to new format"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "count         1984\n",
+       "unique           7\n",
+       "top       dortmund\n",
+       "freq           398\n",
+       "Name: gym_name, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 16
+    }
+   ],
+   "source": [
+    "boulder_data['gym_name'].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['regensburg', 'muenchen-west', 'frankfurt', 'dortmund',\n",
+       "       'muenchen-ost', 'west', 'ost'], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "boulder_data.gym_name.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "boulder_data['gym_name'] = boulder_data['gym_name'].replace(['ost','west'],['muenchen-ost','muenchen-west'])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['regensburg', 'muenchen-west', 'frankfurt', 'dortmund',\n",
+       "       'muenchen-ost'], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "boulder_data.gym_name.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
