convert date format

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -95,7 +95,7 @@
       "text/plain": [
        "count                56784\n",
        "unique               10867\n",
-       "top       2020/10/29 18:01\n",
+       "top       2020/10/29 17:47\n",
        "freq                    15\n",
        "Name: current_time, dtype: object"
       ]
@@ -178,7 +178,7 @@
       "text/plain": [
        "count                38587\n",
        "unique                7377\n",
-       "top       2020/10/29 18:16\n",
+       "top       2020/10/29 17:31\n",
        "freq                    15\n",
        "Name: current_time, dtype: object"
       ]
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +218,13 @@
       "text/plain": [
        "count                 1984\n",
        "unique                 404\n",
-       "top       2020/10/22 07:00\n",
+       "top       2020/10/24 16:00\n",
        "freq                    10\n",
        "Name: current_time, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 9
     }
    ],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 10
     }
    ],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 11
     }
    ],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 13
     }
    ],
    "source": [
@@ -314,32 +314,159 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "##  Convert date format to: YYYY/MM/DD HH:MM (hint: datetime package in python)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "94     2020/10/29 16:45\n",
+       "125    29/10/2020 15:00\n",
+       "Name: current_time, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 14
+    }
+   ],
+   "source": [
+    "# from row 97, the format is DD/MM/YYYY HH:MM\n",
+    "boulder_data[\"current_time\"][9:11]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from datetime import datetime"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "boulder_data = boulder_data.reset_index(drop=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "23    28/10/2020 19:30\n",
+       "24    28/10/2020 19:30\n",
+       "25    28/10/2020 16:00\n",
+       "26    28/10/2020 16:00\n",
+       "27    28/10/2020 16:00\n",
+       "28    28/10/2020 16:00\n",
+       "29    28/10/2020 16:00\n",
+       "30    28/10/2020 15:00\n",
+       "31    28/10/2020 15:00\n",
+       "32    28/10/2020 15:00\n",
+       "33    28/10/2020 15:00\n",
+       "34    28/10/2020 15:00\n",
+       "Name: current_time, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "# checking where the error was - it wasn't here\n",
+    "boulder_data[\"current_time\"][23:35]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# boulder_data.info()\n",
+    "# applied the below function to all rows [10:200] but the other rows were already in the correct format (but some dates coincide with other rows (e.g. 25-29 with 200-205))\n",
+    "# should check for duplicates\n",
+    "boulder_data[\"current_time\"][10:200] = pd.to_datetime(boulder_data['current_time'][10:200], format='%d/%m/%Y %H:%M').dt.strftime('%Y-%m-%d %H:%M')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "24    2020-10-28 19:30\n",
+       "25    2020-10-28 16:00\n",
+       "26    2020-10-28 16:00\n",
+       "27    2020-10-28 16:00\n",
+       "28    2020-10-28 16:00\n",
+       "29    2020-10-28 16:00\n",
+       "30    2020-10-28 15:00\n",
+       "Name: current_time, dtype: object"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 19
+    }
+   ],
+   "source": [
+    "# checking the date is in the correct format\n",
+    "boulder_data[\"current_time\"][24:31]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "          gym_name      current_time  occupancy  waiting  weather_temp  \\\n",
+       "205     regensburg  2020/10/28 15:00       64.0      0.0          9.64   \n",
+       "206       dortmund  2020/10/28 15:00       31.0      0.0         13.79   \n",
+       "207      frankfurt  2020/10/28 15:00       27.0      0.0         14.39   \n",
+       "208  muenchen-west  2020/10/28 15:00       32.0      0.0         12.90   \n",
+       "209   muenchen-ost  2020/10/28 15:00       67.0      0.0         12.90   \n",
+       "\n",
+       "    weather_status  \n",
+       "205         Clouds  \n",
+       "206         Clouds  \n",
+       "207         Clouds  \n",
+       "208         Clouds  \n",
+       "209         Clouds  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gym_name</th>\n      <th>current_time</th>\n      <th>occupancy</th>\n      <th>waiting</th>\n      <th>weather_temp</th>\n      <th>weather_status</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>205</th>\n      <td>regensburg</td>\n      <td>2020/10/28 15:00</td>\n      <td>64.0</td>\n      <td>0.0</td>\n      <td>9.64</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>206</th>\n      <td>dortmund</td>\n      <td>2020/10/28 15:00</td>\n      <td>31.0</td>\n      <td>0.0</td>\n      <td>13.79</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>207</th>\n      <td>frankfurt</td>\n      <td>2020/10/28 15:00</td>\n      <td>27.0</td>\n      <td>0.0</td>\n      <td>14.39</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>208</th>\n      <td>muenchen-west</td>\n      <td>2020/10/28 15:00</td>\n      <td>32.0</td>\n      <td>0.0</td>\n      <td>12.90</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>209</th>\n      <td>muenchen-ost</td>\n      <td>2020/10/28 15:00</td>\n      <td>67.0</td>\n      <td>0.0</td>\n      <td>12.90</td>\n      <td>Clouds</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 20
+    }
+   ],
+   "source": [
+    "# checking where the error was\n",
+    "boulder_data.loc[boulder_data['current_time'] == '2020/10/28 15:00']"
+   ]
   },
   {
    "cell_type": "code",
