check which columns don't contain weather data

--- a/notebooks/clean_data.ipynb
+++ b/notebooks/clean_data.ipynb
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gym_name</th>\n      <th>current_time</th>\n      <th>occupancy</th>\n      <th>waiting</th>\n      <th>weather_temp</th>\n      <th>weather_status</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>frankfurt</td>\n      <td>2020/10/29 18:31</td>\n      <td>61.0</td>\n      <td>0.0</td>\n      <td>10.95</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>muenchen-west</td>\n      <td>2020/10/29 18:31</td>\n      <td>27.0</td>\n      <td>0.0</td>\n      <td>9.22</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>muenchen-ost</td>\n      <td>2020/10/29 18:31</td>\n      <td>100.0</td>\n      <td>14.0</td>\n      <td>9.22</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>dortmund</td>\n      <td>2020/10/29 18:31</td>\n      <td>56.0</td>\n      <td>0.0</td>\n      <td>10.00</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>regensburg</td>\n      <td>2020/10/29 18:31</td>\n      <td>68.0</td>\n      <td>0.0</td>\n      <td>7.42</td>\n      <td>Rain</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 3
+     "execution_count": 4
     }
    ],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -95,13 +95,13 @@
       "text/plain": [
        "count                56784\n",
        "unique               10867\n",
-       "top       2020/10/29 17:47\n",
+       "top       2020/10/29 18:16\n",
        "freq                    15\n",
        "Name: current_time, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 4
+     "execution_count": 5
     }
    ],
    "source": [
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -148,7 +148,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gym_name</th>\n      <th>current_time</th>\n      <th>occupancy</th>\n      <th>waiting</th>\n      <th>weather_temp</th>\n      <th>weather_status</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>frankfurt</td>\n      <td>2020/10/29 18:31</td>\n      <td>61.0</td>\n      <td>0.0</td>\n      <td>10.95</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>muenchen-west</td>\n      <td>2020/10/29 18:31</td>\n      <td>27.0</td>\n      <td>0.0</td>\n      <td>9.22</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>muenchen-ost</td>\n      <td>2020/10/29 18:31</td>\n      <td>100.0</td>\n      <td>14.0</td>\n      <td>9.22</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>dortmund</td>\n      <td>2020/10/29 18:31</td>\n      <td>56.0</td>\n      <td>0.0</td>\n      <td>10.00</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>regensburg</td>\n      <td>2020/10/29 18:31</td>\n      <td>68.0</td>\n      <td>0.0</td>\n      <td>7.42</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>95</th>\n      <td>muenchen-ost</td>\n      <td>29/10/2020 16:31</td>\n      <td>91.0</td>\n      <td>0.0</td>\n      <td>8.97</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>96</th>\n      <td>muenchen-west</td>\n      <td>29/10/2020 16:31</td>\n      <td>27.0</td>\n      <td>0.0</td>\n      <td>8.97</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>97</th>\n      <td>frankfurt</td>\n      <td>29/10/2020 16:31</td>\n      <td>50.0</td>\n      <td>0.0</td>\n      <td>10.75</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>98</th>\n      <td>regensburg</td>\n      <td>29/10/2020 16:31</td>\n      <td>68.0</td>\n      <td>0.0</td>\n      <td>7.16</td>\n      <td>Rain</td>\n    </tr>\n    <tr>\n      <th>99</th>\n      <td>dortmund</td>\n      <td>29/10/2020 16:31</td>\n      <td>11.0</td>\n      <td>0.0</td>\n      <td>10.00</td>\n      <td>Rain</td>\n    </tr>\n  </tbody>\n</table>\n<p>100 rows × 6 columns</p>\n</div>"
      },
      "metadata": {},
-     "execution_count": 5
+     "execution_count": 6
     }
    ],
    "source": [
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -178,13 +178,13 @@
       "text/plain": [
        "count                38587\n",
        "unique                7377\n",
-       "top       2020/10/29 17:31\n",
+       "top       2020/10/29 18:16\n",
        "freq                    15\n",
        "Name: current_time, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 7
+     "execution_count": 8
     }
    ],
    "source": [
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -209,7 +209,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -218,13 +218,13 @@
       "text/plain": [
        "count                 1984\n",
        "unique                 404\n",
-       "top       2020/10/24 16:00\n",
+       "top       2020/10/22 15:00\n",
        "freq                    10\n",
        "Name: current_time, dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 9
+     "execution_count": 10
     }
    ],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +255,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 10
+     "execution_count": 11
     }
    ],
    "source": [
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -276,7 +276,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 11
+     "execution_count": 12
     }
    ],
    "source": [
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +306,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 13
+     "execution_count": 14
     }
    ],
    "source": [
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 14
+     "execution_count": 15
     }
    ],
    "source": [
@@ -345,7 +345,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -386,7 +386,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 18
     }
    ],
    "source": [
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +426,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 19
+     "execution_count": 20
     }
    ],
    "source": [
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -460,13 +460,103 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gym_name</th>\n      <th>current_time</th>\n      <th>occupancy</th>\n      <th>waiting</th>\n      <th>weather_temp</th>\n      <th>weather_status</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>205</th>\n      <td>regensburg</td>\n      <td>2020/10/28 15:00</td>\n      <td>64.0</td>\n      <td>0.0</td>\n      <td>9.64</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>206</th>\n      <td>dortmund</td>\n      <td>2020/10/28 15:00</td>\n      <td>31.0</td>\n      <td>0.0</td>\n      <td>13.79</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>207</th>\n      <td>frankfurt</td>\n      <td>2020/10/28 15:00</td>\n      <td>27.0</td>\n      <td>0.0</td>\n      <td>14.39</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>208</th>\n      <td>muenchen-west</td>\n      <td>2020/10/28 15:00</td>\n      <td>32.0</td>\n      <td>0.0</td>\n      <td>12.90</td>\n      <td>Clouds</td>\n    </tr>\n    <tr>\n      <th>209</th>\n      <td>muenchen-ost</td>\n      <td>2020/10/28 15:00</td>\n      <td>67.0</td>\n      <td>0.0</td>\n      <td>12.90</td>\n      <td>Clouds</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 20
+     "execution_count": 21
     }
    ],
    "source": [
     "# checking where the error was\n",
     "boulder_data.loc[boulder_data['current_time'] == '2020/10/28 15:00']"
    ]
+  },
+  {
+   "source": [
+    "## Use the PyOWM API and obtain the weather for the past dates"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "323"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 41
+    }
+   ],
+   "source": [
+    "# these lines to check are now redundant - can delete (but useful for me to remember)\n",
+    "# boulder_data['weather_temp'].isnull().values.sum()\n",
+    "# boulder_data[\"weather_temp\"][1984-324:]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "           gym_name      current_time  occupancy  waiting  weather_temp  \\\n",
+       "1661     regensburg  2020/09/12 07:15        6.0      0.0           NaN   \n",
+       "1662  muenchen-west  2020/09/12 07:15       23.0      0.0           NaN   \n",
+       "1663      frankfurt  2020/09/12 07:15       11.0      0.0           NaN   \n",
+       "1664   muenchen-ost  2020/09/12 07:15       30.0      0.0           NaN   \n",
+       "1665       dortmund  2020/09/12 07:15        7.0      0.0           NaN   \n",
+       "...             ...               ...        ...      ...           ...   \n",
+       "1979      frankfurt  2020/09/03 19:00       87.0      0.0           NaN   \n",
+       "1980       dortmund  2020/09/03 19:00       47.0      0.0           NaN   \n",
+       "1981   muenchen-ost  2020/09/03 19:00       95.0      0.0           NaN   \n",
+       "1982     regensburg  2020/09/03 19:00       42.0      0.0           NaN   \n",
+       "1983  muenchen-west  2020/09/03 19:00       61.0      0.0           NaN   \n",
+       "\n",
+       "     weather_status  \n",
+       "1661            NaN  \n",
+       "1662            NaN  \n",
+       "1663            NaN  \n",
+       "1664            NaN  \n",
+       "1665            NaN  \n",
+       "...             ...  \n",
+       "1979            NaN  \n",
+       "1980            NaN  \n",
+       "1981            NaN  \n",
+       "1982            NaN  \n",
+       "1983            NaN  \n",
+       "\n",
+       "[323 rows x 6 columns]"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>gym_name</th>\n      <th>current_time</th>\n      <th>occupancy</th>\n      <th>waiting</th>\n      <th>weather_temp</th>\n      <th>weather_status</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>1661</th>\n      <td>regensburg</td>\n      <td>2020/09/12 07:15</td>\n      <td>6.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1662</th>\n      <td>muenchen-west</td>\n      <td>2020/09/12 07:15</td>\n      <td>23.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1663</th>\n      <td>frankfurt</td>\n      <td>2020/09/12 07:15</td>\n      <td>11.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1664</th>\n      <td>muenchen-ost</td>\n      <td>2020/09/12 07:15</td>\n      <td>30.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1665</th>\n      <td>dortmund</td>\n      <td>2020/09/12 07:15</td>\n      <td>7.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>...</th>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n      <td>...</td>\n    </tr>\n    <tr>\n      <th>1979</th>\n      <td>frankfurt</td>\n      <td>2020/09/03 19:00</td>\n      <td>87.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1980</th>\n      <td>dortmund</td>\n      <td>2020/09/03 19:00</td>\n      <td>47.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1981</th>\n      <td>muenchen-ost</td>\n      <td>2020/09/03 19:00</td>\n      <td>95.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1982</th>\n      <td>regensburg</td>\n      <td>2020/09/03 19:00</td>\n      <td>42.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>1983</th>\n      <td>muenchen-west</td>\n      <td>2020/09/03 19:00</td>\n      <td>61.0</td>\n      <td>0.0</td>\n      <td>NaN</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n<p>323 rows × 6 columns</p>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 46
+    }
+   ],
+   "source": [
+    "boulder_data.loc[boulder_data['weather_temp'].isnull()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
